# cookbooks

./: .gitignore
servant/: .gitignore  .hlint.yaml  CHANGELOG.md  Makefile  README.md  csr.conf  pgclient  servant-cookbook.cabal  shell.nix
servant/app/: AnotherBasicAuth.hs  BasicAuthServer.hs  BasicStreaming.hs  Client.hs  ClientFree.hs  Curl.hs  Docs.hs  FileUpload.hs  GenAuthServer.hs  GenericClient.hs  GenericServer.hs  HoistedClient.hs  HoistedServer.hs  HttpsServer.hs  IntServer.hs  JWTServer.hs  JavascriptServer.hs  Main.hs  OverviewServer.hs  PaginatedServer.hs  PostgreSQLConnectionPool.hs  SQLiteApp.hs  STMServer.hs  Sentry.hs  Server.hs  StreamClient.hs  StreamServer.hs  StructuringApis.hs
servant/nix/nixpkgs/: default.nix
servant/src/Cookbooks/: Servant.hs
servant/src/Cookbooks/Servant/: AnotherBasicAuth.hs  Authentication.hs  Client.hs  ClientFree.hs  Curl.hs  Docs.hs  FileUpload.hs  Generics.hs  HoistedServer.hs  Https.hs  JWT.hs  Javascript.hs  Overview.hs  Pagination.hs  PostgreSQLConnectionPool.hs  SQLite.hs  STM.hs  Sentry.hs  Server.hs  Streaming.hs  StructuringApis.hs
servant/static/: api.js  index.html  ui.js
servant/static-files/: foo.txt
servant/test/: Spec.hs
