cabal-version:      >=1.10
name:               servant-cookbook
version:            0.1.0.0
license:            BSD3
maintainer:         ivan.brennan@gmail.com
author:             ivanbrennan
build-type:         Simple
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:
        Cookbooks.Servant.Client
        Cookbooks.Servant.Server
        Cookbooks.Servant.Javascript

    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        aeson >=1.4 && <1.5,
        base >=4.13 && <4.14,
        http-client >=0.6 && <0.7,
        js-jquery >=3.3 && <3.4,
        random >=1.1 && <1.2,
        servant >=0.17 && <0.18,
        servant-client >=0.17 && <0.18,
        servant-js >=0.9 && <0.10,
        servant-server >=0.17 && <0.18,
        text >=1.2 && <1.3,
        warp >=3.3 && <3.4

executable servant-client-cookbook
    main-is:          Client.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        servant-cookbook -any

executable servant-server-cookbook
    main-is:          Server.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        servant-cookbook -any

executable servant-hoisted-client-cookbook
    main-is:          HoistedClient.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        servant-cookbook -any

executable servant-int-server-cookbook
    main-is:          IntServer.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        servant-cookbook -any

executable servant-stream-client-cookbook
    main-is:          StreamClient.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        servant-cookbook -any

executable servant-stream-server-cookbook
    main-is:          StreamServer.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        servant-cookbook -any

executable servant-javascript-server-cookbook
    main-is:          JavascriptServer.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        servant-cookbook -any
