cabal-version:      >=1.10
name:               servant-cookbook
version:            0.1.0.0
license:            BSD3
maintainer:         ivan.brennan@gmail.com
author:             ivanbrennan
build-type:         Simple
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:
        Cookbooks.Servant.Authentication
        Cookbooks.Servant.Client
        Cookbooks.Servant.Docs
        Cookbooks.Servant.Generics
        Cookbooks.Servant.Https
        Cookbooks.Servant.Javascript
        Cookbooks.Servant.Overview
        Cookbooks.Servant.PostgreSQLConnectionPool
        Cookbooks.Servant.Server
        Cookbooks.Servant.SQLite
        Cookbooks.Servant.STM
        Cookbooks.Servant.StructuringApis

    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        aeson >=1.4 && <1.5,
        base >=4.13 && <4.14,
        bytestring >=0.10 && <0.11,
        containers >=0.6 && <0.7,
        cookie >=0.4 && <0.5,
        http-api-data >=0.4 && <0.5,
        http-client >=0.6 && <0.7,
        http-types >=0.12 && <0.13,
        lens >=4.18 && <4.19,
        monad-logger >=0.3 && <0.4,
        persistent >=2.10 && <2.11,
        persistent-postgresql >=2.10 && <2.11,
        persistent-template >=2.8 && <2.9,
        postgresql-simple >=0.6 && <0.7,
        random >=1.1 && <1.2,
        resource-pool >=0.2 && <0.3,
        resourcet >=1.2 && <1.3,
        servant >=0.17 && <0.18,
        servant-client >=0.17 && <0.18,
        servant-client-core >=0.17 && <0.18,
        servant-docs >=0.11 && <0.12,
        servant-js >=0.9 && <0.10,
        servant-server >=0.17 && <0.18,
        sqlite-simple >=0.4 && <0.5,
        stm >=2.5 && <2.6,
        text >=1.2 && <1.3,
        transformers >=0.5 && <0.6,
        wai >=3.2 && <3.3,
        warp >=3.3 && <3.4,
        warp-tls >=3.3 && <3.4

executable servant-client-cookbook
    main-is:          Client.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        servant-cookbook -any

executable servant-server-cookbook
    main-is:          Server.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        servant-cookbook -any

executable servant-hoisted-client-cookbook
    main-is:          HoistedClient.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        servant-cookbook -any

executable servant-int-server-cookbook
    main-is:          IntServer.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        servant-cookbook -any

executable servant-stream-client-cookbook
    main-is:          StreamClient.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        servant-cookbook -any

executable servant-stream-server-cookbook
    main-is:          StreamServer.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        servant-cookbook -any

executable servant-javascript-server-cookbook
    main-is:          JavascriptServer.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        servant-cookbook -any

executable servant-basic-auth-server-cookbook
    main-is:          BasicAuthServer.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        servant-cookbook -any

executable servant-gen-auth-server-cookbook
    main-is:          GenAuthServer.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        servant-cookbook -any

executable serve-docs
    main-is:          Docs.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        servant-cookbook -any

executable servant-structuring-apis
    main-is:          StructuringApis.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        servant-cookbook -any

executable servant-generic-server
    main-is:          GenericServer.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        servant-cookbook -any

executable servant-generic-client
    main-is:          GenericClient.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        servant-cookbook -any

executable servant-https-server
    main-is:          HttpsServer.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        servant-cookbook -any

executable servant-overview-server
    main-is:          OverviewServer.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        servant-cookbook -any

executable servant-sqlite-app
    main-is:          SQLiteApp.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        servant-cookbook -any

executable servant-postgresql-connection-pool
    main-is:          PostgreSQLConnectionPool.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        servant-cookbook -any

executable servant-stm-server
    main-is:          STMServer.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >=4.13 && <4.14,
        servant-cookbook -any
